--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ env:
   variables:
     AWS_DEFAULT_REGION: "us-east-1"
     CONTAINER_NAME: "webapp"
+    IMAGE_TAG: "latest"
   parameter-store:
     AWS_ACCOUNT_ID: "/CodeBuild/AWS_ACCOUNT_ID"
     IMAGE_REPO_NAME: "/CodeBuild/IMAGE_REPO_NAME"
@@ -27,7 +28,6 @@ phases:
       - echo "=== BUILD PHASE ==="
       - echo "Build started on $(date)"
       - echo "Building Docker image..."
-      - IMAGE_TAG=$(date +%Y%m%d%H%M%S)
       - docker build --platform=linux/amd64 -t $IMAGE_REPO_NAME:$IMAGE_TAG -f DockerfileProd .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 
