--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,40 +1,21 @@
 version: 0.2
 
-env:
-  variables:
-    # These will be passed from CodePipeline variables
-    AWS_DEFAULT_REGION: "#{AWS_DEFAULT_REGION}"
-    AWS_ACCOUNT_ID: "#{AWS_ACCOUNT_ID}"
-    IMAGE_REPO_NAME: "#{IMAGE_REPO_NAME}"
-    CONTAINER_NAME: "webapp"
-    IMAGE_TAG: "latest"  # Or use #{IMAGE_TAG} if defined in pipeline
-
 phases:
   pre_build:
     commands:
-      - echo "=== PRE-BUILD PHASE ==="
-      - echo "AWS Region: $AWS_DEFAULT_REGION"
-      - echo "AWS Account: $AWS_ACCOUNT_ID"
-      - echo "Image Repo: $IMAGE_REPO_NAME"
-      - aws sts get-caller-identity
-      - echo "Logging in to Amazon ECR..."
+      - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-
   build:
     commands:
-      - echo "=== BUILD PHASE ==="
-      - echo "Build started on $(date)"
-      - echo "Building Docker image..."
-      - docker build --platform=linux/amd64 -t $IMAGE_REPO_NAME:$IMAGE_TAG -f DockerfileProd .
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-
+      - echo Build started on `date`
+      - echo Building the Docker image...          
+      - docker build --platform=linux/amd64  -t $IMAGE_REPO_NAME:$IMAGE_TAG -f DockerfileProd .
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
   post_build:
     commands:
-      - echo "=== POST-BUILD PHASE ==="
-      - echo "Build completed on $(date)"
-      - echo "Pushing Docker image..."
+      - echo Build completed on `date`
+      - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - printf '[{"name":"%s","imageUri":"%s"}]' "$CONTAINER_NAME" "$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG" > imagedefinitions.json
-
 artifacts:
-  files: imagedefinitions.json
+    files: imagedefinitions.json
