--- a/DockerfileProd
+++ b/DockerfileProd
@@ -1,2 +1,2 @@
-FROM  --platform=linux/amd64 httpd:latest
-COPY .  /usr/local/apache2/htdocs/
+FROM public.ecr.aws/docker/library/httpd:latest
+COPY . /usr/local/apache2/htdocs/
